# claude-cli-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/api/: Cargo.toml
crates/api/src/: client.rs  errors.rs  lib.rs  normalize.rs  retry.rs  streaming.rs
crates/auth/: Cargo.toml
crates/auth/src/: api_key.rs  copilot.rs  keychain.rs  lib.rs  oauth.rs  providers.rs
crates/bridge/: Cargo.toml
crates/bridge/src/: auth.rs  lib.rs  messaging.rs  session.rs  websocket.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  main.rs  setup.rs
crates/commands/: Cargo.toml
crates/commands/src/: command.rs  lib.rs  registry.rs
crates/commands/src/builtin/: clear.rs  commit.rs  compact.rs  config.rs  cost.rs  diff.rs  exit.rs  help.rs  init.rs  mcp.rs  memory.rs  mod.rs  model.rs  permissions.rs  resume.rs  session.rs  status.rs  theme.rs  version.rs  vim.rs  voice.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  message.rs  permission.rs  state.rs  task.rs  tool.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: client.rs  lib.rs  manager.rs  transport.rs  types.rs
crates/query/: Cargo.toml
crates/query/src/: compact.rs  engine.rs  lib.rs  query_loop.rs  system_prompt.rs  tool_set.rs
crates/services/: Cargo.toml
crates/services/src/: analytics.rs  compact.rs  cost.rs  lib.rs  plugins.rs  session.rs  tips.rs
crates/tools/: Cargo.toml
crates/tools/src/: agent.rs  bash.rs  compat.rs  config_tool.rs  file_edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  lib.rs  lsp.rs  mcp_tool.rs  notebook_edit.rs  registry.rs  send_message.rs  skill.rs  task_create.rs  task_get.rs  task_list.rs  task_output.rs  task_stop.rs  task_update.rs  team_create.rs  team_delete.rs  todo_write.rs  web_fetch.rs  web_search.rs
crates/tools/src/prompts/: bash.txt  file_edit.txt  file_read.txt  file_write.txt  glob.txt  grep.txt
crates/tools/src/shared/: mod.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  diff_view.rs  event.rs  keybindings.rs  lib.rs  markdown_render.rs  message_view.rs  onboarding.rs  permission_dialog.rs  prompt_input.rs  repl.rs  spinner.rs  status_line.rs  terminal.rs  theme.rs
crates/utils/: Cargo.toml
crates/utils/src/: diff.rs  env.rs  fs.rs  git.rs  lib.rs  markdown.rs  platform.rs  shell.rs  tokens.rs
scripts/: build.ps1  build.sh  ci.ps1  ci.sh  install.ps1  install.sh  release.ps1  release.sh  test.ps1  test.sh
src/: lib.rs
tests/integration/: mod.rs  test_cli.rs  test_commands.rs  test_mcp.rs  test_query_loop.rs  test_session.rs  test_tools.rs
tests/integration/helpers/: mock_api.rs  mod.rs
