[package]
name = "claude_api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Anthropic Messages API client with SSE streaming"

[dependencies]
claude_core.workspace = true
claude_auth.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures-util.workspace = true

[dev-dependencies]
wiremock.workspace = true
tempfile.workspace = true
