[package]
name = "claude_auth"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Authentication: OAuth PKCE, API key, keychain, provider routing"

[dependencies]
claude_core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
sha2.workspace = true
base64.workspace = true
rand.workspace = true

[dev-dependencies]
tempfile.workspace = true
wiremock.workspace = true
