[package]
name = "claude_bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Bridge: WebSocket relay to claude.ai, JWT auth, remote sessions"

[dependencies]
# claude_core.workspace = true  # CROSS-DEP: dev1 — not directly needed
# claude_api.workspace = true  # CROSS-DEP: dev1 — not directly needed
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
base64.workspace = true

[dev-dependencies]
tempfile.workspace = true
