[package]
name = "claude_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Claude Code CLI — terminal AI coding assistant"
default-run = "claude"

[[bin]]
name = "claude"
path = "src/main.rs"

[dependencies]
claude_core.workspace = true
claude_api.workspace = true
claude_query.workspace = true
claude_commands.workspace = true
claude_tools.workspace = true
claude_tui.workspace = true
claude_auth.workspace = true
claude_services.workspace = true
claude_bridge.workspace = true
claude_mcp.workspace = true
claude_utils.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
crossterm.workspace = true
serde_json.workspace = true
