[package]
name = "claude_commands"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Slash command system: /help, /compact, /model, /mcp, ..."

[dependencies]
claude_core.workspace = true
claude_utils.workspace = true
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
