[package]
name = "claude_core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core types: message, tool, permission, config, state, task"

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["sync"] }
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
