[package]
name = "claude_query"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "QueryEngine: conversation orchestration, query loop, context compaction"

[dependencies]
claude_core.workspace = true
claude_api.workspace = true
claude_commands.workspace = true
claude_utils.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
futures-util.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
futures-util.workspace = true
claude_auth.workspace = true
