[package]
name = "claude_services"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Services: session storage, analytics, compaction, plugins, tips"

[dependencies]
claude_core.workspace = true
claude_api.workspace = true
claude_utils.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
