[package]
name = "claude_tools"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Built-in tool implementations (Bash, File*, Glob, Grep, Web*, Agent, MCP, ...)"

[dependencies]
claude_core.workspace = true
claude_utils.workspace = true
claude_mcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
globset.workspace = true
ignore.workspace = true
similar.workspace = true
base64.workspace = true
reqwest.workspace = true

[dev-dependencies]
tempfile.workspace = true
