[package]
name = "claude_tui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Terminal UI: ratatui-based REPL, message rendering, diff view, dialogs"

[dependencies]
# CROSS-DEP: uncomment after dev1/dev2 complete Wave 6 recovery
# claude_core.workspace = true
# claude_query.workspace = true
# claude_utils.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
syntect.workspace = true
pulldown-cmark.workspace = true
similar.workspace = true
unicode-width = "0.2"

[dev-dependencies]
tempfile.workspace = true
